# pixe

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Makefile  Pipfile  README.md  REPORT.md  ROADMAP.md  docgen  go.mod  go.sum  main.go  pixe.py  pyproject.toml  setup.py  tomte.py
.github/workflows/: ci.yml  flake8.yml  lint.yml  pages.yml  publish.yml  pytest.yml  release.yml  testing.yml  tests.yml
.opencode/agents/: architect.md  committer.md  developer.md  planner.md  scribe.md  tester.md
.state/: ARCHITECTURAL_OVERVIEW.md  ARCHITECTURE.md  ARCHIVE.md  PLAN.md  STATE.md
cmd/: clean.go  clean_test.go  doctor.go  gui.go  gui_test.go  helpers.go  helpers_test.go  query.go  query_duplicates.go  query_errors.go  query_files.go  query_format.go  query_format_test.go  query_inventory.go  query_run.go  query_runs.go  query_skipped.go  resume.go  retry.go  root.go  root_test.go  sort.go  sort_test.go  stats.go  status.go  status_test.go  verify.go  version.go
docs/: _config.yml  adding-formats.md  ai.md  changelog.md  commands.md  configuration.md  contributing.md  how-it-works.md  index.html  index.md  install.md  packages.md  technical.md
docs/_data/: navigation.yml
docs/_includes/: footer.html  format-grid.html  head.html  hero.html  nav.html  pipeline.html
docs/_layouts/: default.html  page.html
docs/_sass/: _cards.scss  _code.scss  _nav.scss  (+9 more)
filetypes/: __init__.py  image_file.py
scripts/: pre-commit
src/: pixe.py
tests/: conftest.py  test_function.py  test_integration.py  test_tomte.py  test_unit.py
(+164 files in other folders)
