[project]
name = "pixe"
version = "0.8.0"
description = "A digital helper to keep your files neat and tidy"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
keywords = [
    "archive",
    "photos",
    "organize"
]
authors = [
    {name = "Chris Wells", email="chris@wells.io"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: System :: Archiving"
]
dependencies = [
    "click>=8.3.0",
    "ffmpeg-python>=0.2.0",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "pyexiftool>=0.5.6",
]

[dependency-groups]
dev = [
    "piexif>=1.1.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-freezer>=0.4.9",
    "ruff>=0.14.2",
]

[project.urls]
homepage = "https://cwlls.com/pixe"
repository = "https://github.com/cwlls/pixe.git"

[project.scripts]
pixe = "pixe.main:cli"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
log_cli = true
addopts = "-rf --import-mode=importlib"
